--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en' dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Borderlands 3 Guides</title>
+    <title>Borderlands 3 Guides - Home</title>
   </head>
   <body background="imagesWeb1/image8.jpg">
     <table cellpadding="10" cellspacing="10" align="center" bgcolor="white" border="1">
