--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Borderlands 3 Guides - Home</title>
   </head>
   <body background="imagesWeb1/image8.jpg">
-    <table cellpadding="10" cellspacing="10" align="center" bgcolor="white" border="1">
+    <table cellpadding="10" cellspacing="10" align="center" bgcolor="grey" border=".5">
       <tr>
         <td colspan="4" align="center" bgcolor="blue">Home</td>
         <td colspan="4" align="center" bgcolor="green">Boss Guides</td>
