--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Borderlands 3 Guides - Home</title>
   </head>
   <body background="imagesWeb1/image8.jpg">
-    <table cellpadding="10" cellspacing="10" align="center" bgcolor="grey" border=".5">
+    <table cellpadding="10" cellspacing="10" align="center" bgcolor="grey" border="1" bordercolor="black">
       <tr>
         <td colspan="4" align="center" bgcolor="blue">Home</td>
         <td colspan="4" align="center" bgcolor="green">Boss Guides</td>
@@ -28,9 +28,9 @@
       </tr>
       <tr>
         <td colspan="6" align="center"><img src="imagesWeb1/image2.png" width="200" height="200"></td>
-        <td colspan="6" align="center"><img src="imagesWeb1/image3.jpg" width="200" height="200"</td>
-        <td colspan="6" align="center"><img src="imagesWeb1/image4.jpg" width="200" height="200"</td>
-        <td colspan="6" align="center"><img src="imagesWeb1/image5.jpg" width="200" height="200"</td>
+        <td colspan="6" align="center"><img src="imagesWeb1/image3.jpg" width="200" height="200"></td>
+        <td colspan="6" align="center"><img src="imagesWeb1/image4.jpg" width="200" height="200"></td>
+        <td colspan="6" align="center"><img src="imagesWeb1/image5.jpg" width="200" height="200"></td>
       </tr>
       <tr>
         <td colspan="6">
